--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.1",
+    "netlify-cli": "^8.5.0",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-confirm-alert": "^2.7.0",
